--- a/test/e2e/framework/config/BUILD.bazel
+++ b/test/e2e/framework/config/BUILD.bazel
@@ -19,6 +19,8 @@ go_library(
     tags = ["manual"],
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/util/feature:go_default_library",
+        "@com_github_spf13_pflag//:go_default_library",
         "@io_k8s_apimachinery//pkg/util/errors:go_default_library",
         "@io_k8s_client_go//tools/clientcmd:go_default_library",
     ],
