Add 'cmctl upgrade migrate' tool to assist in v1.7 upgrade
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/cmd/ctl/BUILD.bazel
+++ b/cmd/ctl/BUILD.bazel
@@ -61,6 +61,7 @@ filegroup(
         "//cmd/ctl/pkg/install:all-srcs",
         "//cmd/ctl/pkg/renew:all-srcs",
         "//cmd/ctl/pkg/status:all-srcs",
+        "//cmd/ctl/pkg/upgrade:all-srcs",
         "//cmd/ctl/pkg/version:all-srcs",
     ],
     tags = ["automanaged"],
