Add integration test for 'upgrade migrate' command
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/test/integration/ctl/BUILD.bazel
+++ b/test/integration/ctl/BUILD.bazel
@@ -49,6 +49,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//test/integration/ctl/install_framework:all-srcs",
+        "//test/integration/ctl/migrate:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
