Re-organise and extend path loading logic to make it easier to run integration tests using Delve/GoLand
Signed-off-by: James Munnelly <jmunnelly@apple.com>

--- a/internal/BUILD.bazel
+++ b/internal/BUILD.bazel
@@ -16,6 +16,7 @@ filegroup(
         "//internal/apis/config/webhook:all-srcs",
         "//internal/apis/meta:all-srcs",
         "//internal/ingress:all-srcs",
+        "//internal/test/paths:all-srcs",
         "//internal/vault:all-srcs",
     ],
     tags = ["automanaged"],
