move versionchecker tests to test/integration
Since this test requires setup before it can successfully run,
we define it as an integration test and move it here so that on a
fresh checkout a user can always run `go test ./pkg/...` and expect that
it would succeed.

Also involves:

- Exporting the VersionChecker and adding NewWithConfig to enable
  testing
- Some comment changes
- A change to the type returned by New(); see
  https://github.com/golang/go/wiki/CodeReviewComments#interfaces

Ideally I'd not add `NewFromClient` but I think it's the most minimal
change and is preferable to publicly exporting `VersionChecker.client`.

Signed-off-by: Ashley Davis <ashley.davis@jetstack.io>

--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -15,6 +15,7 @@ filegroup(
         "//test/integration/ctl:all-srcs",
         "//test/integration/framework:all-srcs",
         "//test/integration/validation:all-srcs",
+        "//test/integration/versionchecker:all-srcs",
         "//test/integration/webhook:all-srcs",
     ],
     tags = ["automanaged"],
