--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -14,6 +14,7 @@ filegroup(
         "//test/integration/conversion:all-srcs",
         "//test/integration/ctl:all-srcs",
         "//test/integration/framework:all-srcs",
+        "//test/integration/rfc2136_dns01:all-srcs",
         "//test/integration/validation:all-srcs",
         "//test/integration/webhook:all-srcs",
     ],
