Updates CRD with new secret template comment
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/deploy/crds/crd-certificates.yaml
+++ b/deploy/crds/crd-certificates.yaml
@@ -206,7 +206,7 @@ spec:
                   description: SecretName is the name of the secret resource that will be automatically created and managed by this Certificate resource. It will be populated with a private key and certificate, signed by the denoted issuer.
                   type: string
                 secretTemplate:
-                  description: 'SecretTemplate defines annotations and labels to be propagated to the Kubernetes Secret when it is created or updated. Once created, labels and annotations are not yet removed from the Secret when they are removed from the template unless the ''ExperimentalSecretApplySecretTemplateControllerMinKubernetesVTODO'' feature gate is enabled. See: - https://github.com/jetstack/cert-manager/issues/4292 - https://github.com/jetstack/cert-manager/pull/4638 - TODO: website link'
+                  description: SecretTemplate defines annotations and labels to be copied to the Certificate's Secret. Labels and annotations on the Secret will be changed as they appear on the SecretTemplate.
                   type: object
                   properties:
                     annotations:
