--- a/pkg/controller/certificates/issuing/BUILD.bazel
+++ b/pkg/controller/certificates/issuing/BUILD.bazel
@@ -4,6 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = [
         "issuing_controller.go",
+        "secret_manager.go",
         "temporary.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/issuing",
@@ -20,6 +21,7 @@ go_library(
         "//pkg/controller/certificates/internal/secretsmanager:go_default_library",
         "//pkg/controller/certificates/trigger/policies:go_default_library",
         "//pkg/logs:go_default_library",
+        "//pkg/util:go_default_library",
         "//pkg/util/kube:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//pkg/util/predicate:go_default_library",
@@ -28,6 +30,7 @@ go_library(
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
+        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
@@ -35,7 +38,9 @@ go_library(
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
+        "@io_k8s_sigs_structured_merge_diff_v4//fieldpath:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
@@ -55,7 +60,10 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = ["issuing_controller_test.go"],
+    srcs = [
+        "issuing_controller_test.go",
+        "secret_manager_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1:go_default_library",
