--- a/test/integration/BUILD.bazel
+++ b/test/integration/BUILD.bazel
@@ -14,6 +14,8 @@ filegroup(
         "//test/integration/conversion:all-srcs",
         "//test/integration/ctl:all-srcs",
         "//test/integration/framework:all-srcs",
+        "//test/integration/fuzz/acme:all-srcs",
+        "//test/integration/fuzz/cert-manager:all-srcs",
         "//test/integration/rfc2136_dns01:all-srcs",
         "//test/integration/validation:all-srcs",
         "//test/integration/versionchecker:all-srcs",
