--- a/pkg/controller/certificates/issuing/internal/BUILD.bazel
+++ b/pkg/controller/certificates/issuing/internal/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
         "keystore.go",
         "secret.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/internal/secretsmanager",
+    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/issuing/internal",
     visibility = ["//pkg/controller/certificates:__subpackages__"],
     deps = [
         "//pkg/api/util:go_default_library",
@@ -40,10 +40,10 @@ go_test(
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/controller:go_default_library",
-        "//pkg/controller/certificates/internal/test:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/util/pki:go_default_library",
         "//test/unit/coreclients:go_default_library",
+        "//test/unit/crypto:go_default_library",
         "//test/unit/gen:go_default_library",
         "//test/unit/listers:go_default_library",
         "@com_github_google_gofuzz//:go_default_library",
