--- a/test/integration/certificates/BUILD.bazel
+++ b/test/integration/certificates/BUILD.bazel
@@ -9,6 +9,7 @@ go_test(
         "trigger_controller_test.go",
     ],
     deps = [
+        "//internal/policies:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
@@ -18,7 +19,6 @@ go_test(
         "//pkg/controller/certificates/metrics:go_default_library",
         "//pkg/controller/certificates/revisionmanager:go_default_library",
         "//pkg/controller/certificates/trigger:go_default_library",
-        "//pkg/controller/certificates/trigger/policies:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
         "//pkg/util/pki:go_default_library",
