--- a/test/unit/crypto/BUILD.bazel
+++ b/test/unit/crypto/BUILD.bazel
@@ -2,9 +2,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["test.go"],
-    importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/internal/test",
-    visibility = ["//pkg/controller/certificates:__subpackages__"],
+    srcs = ["crypto.go"],
+    importpath = "github.com/jetstack/cert-manager/test/unit/crypto",
+    visibility = ["//visibility:public"],
     deps = [
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
