--- a/pkg/controller/certificates/internal/secretsmanager/BUILD.bazel
+++ b/pkg/controller/certificates/internal/secretsmanager/BUILD.bazel
@@ -9,11 +9,13 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/internal/secretsmanager",
     visibility = ["//pkg/controller/certificates:__subpackages__"],
     deps = [
+        "//internal/controller/feature:go_default_library",
         "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/util:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "//pkg/util/pki:go_default_library",
         "@com_github_pavel_v_chernykh_keystore_go_v4//:go_default_library",
         "@com_sslmate_software_src_go_pkcs12//:go_default_library",
@@ -55,12 +57,10 @@ go_test(
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_client_go//applyconfigurations/core/v1:go_default_library",
         "@io_k8s_client_go//applyconfigurations/meta/v1:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
-        "@io_k8s_client_go//testing:go_default_library",
         "@io_k8s_component_base//featuregate/testing:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
