--- a/internal/test/paths/BUILD.bazel
+++ b/internal/test/paths/BUILD.bazel
@@ -2,10 +2,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "bazel.go",
-        "paths.go",
-    ],
+    srcs = ["paths.go"],
     data = [
         "//deploy/crds:crds.yaml",
     ],
