Add targets for unit and integration tests in make
These lean heavily on `go test` for everything possible.

Also adds setup for versionchecker test in make, and a script for
extracting CRDs from templated rendered YAML files

Signed-off-by: Ashley Davis <ashley.davis@jetstack.io>

--- a/hack/BUILD.bazel
+++ b/hack/BUILD.bazel
@@ -275,6 +275,7 @@ filegroup(
         "//hack/bin:all-srcs",
         "//hack/boilerplate:all-srcs",
         "//hack/build:all-srcs",
+        "//hack/extractcrd:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
