Add tests from rebase and more policies under /internal/controller/certificates
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/internal/controller/certificates/policies/BUILD.bazel
+++ b/internal/controller/certificates/policies/BUILD.bazel
@@ -8,9 +8,10 @@ go_library(
         "gatherer.go",
         "policies.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/internal/controller/policies",
+    importpath = "github.com/jetstack/cert-manager/internal/controller/certificates/policies",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/controller/certificates:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/client/listers/certmanager/v1:go_default_library",
         "//pkg/controller/certificates:go_default_library",
