--- a/pkg/controller/certificates/issuing/internal/BUILD.bazel
+++ b/pkg/controller/certificates/issuing/internal/BUILD.bazel
@@ -9,8 +9,8 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller/certificates/issuing/internal",
     visibility = ["//pkg/controller/certificates:__subpackages__"],
     deps = [
+        "//internal/controller/certificates:go_default_library",
         "//internal/controller/feature:go_default_library",
-        "//pkg/api/util:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
         "//pkg/logs:go_default_library",
