Adds IssuanceAttempts field to Certificate's status
Signed-off-by: irbekrm <irbekrm@gmail.com>

--- a/deploy/crds/crd-certificates.yaml
+++ b/deploy/crds/crd-certificates.yaml
@@ -338,6 +338,9 @@ spec:
                   x-kubernetes-list-map-keys:
                     - type
                   x-kubernetes-list-type: map
+                issuanceAttempts:
+                  description: The number of times certificate issuance has been attempted and failed for this revision (see the description of status.revision field). If an issuance has failed, the delay till the next issuance will be calculated using formula time.Hour * 2 ^ (issuanceAttempts - 1). This field will only be set if the issuance is currently failing.
+                  type: integer
                 lastFailureTime:
                   description: LastFailureTime is the time as recorded by the Certificate controller of the most recent failure to complete a CertificateRequest for this Certificate resource. If set, cert-manager will not re-request another Certificate until 1 hour has elapsed from this time.
                   type: string
