--- a/pkg/controller/BUILD.bazel
+++ b/pkg/controller/BUILD.bazel
@@ -13,13 +13,18 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/pkg/controller",
     visibility = ["//visibility:public"],
     deps = [
+        "//internal/controller/feature:go_default_library",
         "//pkg/acme/accounts:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
+        "//pkg/client/clientset/versioned/scheme:go_default_library",
         "//pkg/client/informers/externalversions:go_default_library",
         "//pkg/logs:go_default_library",
         "//pkg/metrics:go_default_library",
+        "//pkg/util:go_default_library",
+        "//pkg/util/feature:go_default_library",
         "@com_github_go_logr_logr//:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/api/resource:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
@@ -30,11 +35,15 @@ go_library(
         "@io_k8s_client_go//discovery:go_default_library",
         "@io_k8s_client_go//informers:go_default_library",
         "@io_k8s_client_go//kubernetes:go_default_library",
+        "@io_k8s_client_go//kubernetes/typed/core/v1:go_default_library",
         "@io_k8s_client_go//rest:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
+        "@io_k8s_client_go//tools/clientcmd:go_default_library",
         "@io_k8s_client_go//tools/record:go_default_library",
         "@io_k8s_client_go//util/workqueue:go_default_library",
+        "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
         "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned:go_default_library",
+        "@io_k8s_sigs_gateway_api//pkg/client/clientset/versioned/scheme:go_default_library",
         "@io_k8s_sigs_gateway_api//pkg/client/informers/externalversions:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
     ],
