--- a/pkg/controller/certificaterequests/vault/BUILD.bazel
+++ b/pkg/controller/certificaterequests/vault/BUILD.bazel
@@ -44,6 +44,7 @@ go_test(
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/util/pki:go_default_library",
