--- a/pkg/controller/certificaterequests/venafi/BUILD.bazel
+++ b/pkg/controller/certificaterequests/venafi/BUILD.bazel
@@ -47,6 +47,7 @@ go_test(
         "//pkg/apis/certmanager:go_default_library",
         "//pkg/apis/certmanager/v1:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/controller:go_default_library",
         "//pkg/controller/certificaterequests:go_default_library",
         "//pkg/controller/test:go_default_library",
         "//pkg/issuer/venafi/client:go_default_library",
