Adds patch permissions to ca-injector. Adds feature gate to ca-injector deployment
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
+++ b/deploy/charts/cert-manager/templates/cainjector-deployment.yaml
@@ -74,6 +74,9 @@ spec:
           {{- with .Values.cainjector.extraArgs }}
           {{- toYaml . | nindent 10 }}
           {{- end }}
+          {{- if .Values.cainjector.featureGates }}
+          - --feature-gates={{ .Values.cainjector.featureGates }}
+          {{- end }}
           env:
           - name: POD_NAMESPACE
             valueFrom:
