Adds roundtrip tests for issuer and cluster issuer serialize
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/test/integration/issuers/BUILD.bazel
+++ b/test/integration/issuers/BUILD.bazel
@@ -1,21 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
-
-go_library(
-    name = "go_default_library",
-    srcs = ["issuers.go"],
-    importpath = "github.com/jetstack/cert-manager/test/integration/issuers",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//internal/controller/issuers:go_default_library",
-        "//pkg/apis/certmanager/v1:go_default_library",
-        "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/util:go_default_library",
-        "//test/integration/framework:go_default_library",
-        "@com_github_stretchr_testify//assert:go_default_library",
-        "@io_k8s_api//core/v1:go_default_library",
-        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
-    ],
-)
+load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
 filegroup(
     name = "package-srcs",
@@ -29,4 +12,19 @@ filegroup(
     srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["condition_list_type_test.go"],
+    deps = [
+        "//internal/controller/issuers:go_default_library",
+        "//pkg/apis/certmanager/v1:go_default_library",
+        "//pkg/apis/meta/v1:go_default_library",
+        "//pkg/util:go_default_library",
+        "//test/integration/framework:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
+        "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+    ],
 )
