--- a/test/e2e/util/BUILD.bazel
+++ b/test/e2e/util/BUILD.bazel
@@ -24,7 +24,8 @@ go_library(
         "@io_k8s_apimachinery//pkg/util/intstr:go_default_library",
         "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
         "@io_k8s_client_go//discovery:go_default_library",
-        "@io_k8s_sigs_gateway_api//apis/v1alpha1:go_default_library",
+        "@io_k8s_sigs_gateway_api//apis/v1alpha2:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
