make: add the targets 'kind-load', 'kind-cluster' and 'deploy'
Signed-off-by: Maël Valais <mael@vls.dev>

--- a/make/Makefile
+++ b/make/Makefile
@@ -51,6 +51,7 @@ include make/containers.mk
 include make/release_containers.mk
 include make/manifests.mk
 include make/licenses.mk
+include make/deploy.mk
 
 .PHONY: all
 all: binaries helm-chart static-manifests all-containers  ## Build all artifacts which might be run or used locally, except for anything signed.
