Adds certificates policy checks for owner references
Signed-off-by: joshvanl <vleeuwenjoshua@gmail.com>

--- a/internal/controller/certificates/policies/BUILD.bazel
+++ b/internal/controller/certificates/policies/BUILD.bazel
@@ -19,12 +19,14 @@ go_library(
         "//pkg/util/pki:go_default_library",
         "//pkg/util/predicate:go_default_library",
         "@io_k8s_api//core/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/api/equality:go_default_library",
         "@io_k8s_apimachinery//pkg/api/errors:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/labels:go_default_library",
         "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
         "@io_k8s_client_go//listers/core/v1:go_default_library",
         "@io_k8s_sigs_structured_merge_diff_v4//fieldpath:go_default_library",
+        "@io_k8s_sigs_structured_merge_diff_v4//value:go_default_library",
         "@io_k8s_utils//clock:go_default_library",
         "@io_k8s_utils//pointer:go_default_library",
     ],
@@ -51,10 +53,12 @@ go_test(
         "@io_k8s_api//core/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
+        "@io_k8s_apimachinery//pkg/types:go_default_library",
         "@io_k8s_client_go//kubernetes/scheme:go_default_library",
         "@io_k8s_client_go//tools/cache:go_default_library",
         "@io_k8s_klog_v2//:go_default_library",
         "@io_k8s_utils//clock/testing:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
